[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-files = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
ntest = { workspace = true }
openid = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
test-context = { workspace = true }
test-with = { workspace = true }
thirtyfour = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

bombastic-api = { workspace = true }
bombastic-indexer = { workspace = true }
spog-api = { workspace = true }
trustification-auth = { workspace = true, default-features = false, features = ["swagger"] }
trustification-event-bus = { workspace = true }
trustification-index = { workspace = true }
trustification-indexer = { workspace = true }
trustification-infrastructure = { workspace = true }
trustification-storage = { workspace = true }
vexination-api = { workspace = true }
vexination-indexer = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
spog-model = { path = "../spog/model" }

[features]
default = ["admin"]
admin = []
# UI tests
ui = []
