[package]
name = "trustification-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-s3 = { git = "https://github.com/trustification/rust-s3.git", branch = "trustification" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
futures = "0.3"
bytes = "1"
http = "0.2"
async-stream = "0.3"
log = "0.4"
urlencoding = "2.1.2"
thiserror = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd", "bzip2"] }
clap = { version = "4", features = ["derive", "env"] }
prometheus = "0.13.3"
bombastic-model = { path = "../bombastic/model" }
csaf = "0.5.0"
hide = "0.1.1"