[package]
name = "trustification-storage"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
async-compression = { workspace = true, features = ["tokio", "zstd", "bzip2"] }
async-stream = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
csaf = { workspace = true }
futures = { workspace = true }
hide = { workspace = true }
http = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
rust-s3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
urlencoding = { workspace = true }

bombastic-model = { workspace = true }

[dev-dependencies]
rstest = "0.19"
test-log = { version = "0", features = ["env_logger", "trace"] }
