[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
vexination = { path = "../vexination/vexination" }
bombastic = { path = "../bombastic/bombastic" }
spog = { path = "../spog/spog" }
exhort = { path = "../exhort/exhort"}
collectorist = { path = "../collectorist/collectorist" }
collector = { path = "../collector/collector" }
exporter = { path = "../exporter" }
v11y = { path = "../v11y/v11y"}
trustification-admin = { path = "../admin" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
