[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
vexination = { path = "../vexination/vexination" }
bombastic = { path = "../bombastic/bombastic" }
spog = { path = "../spog/spog" }
exhort = { path = "../exhort/exhort" }
collectorist = { path = "../collectorist/collectorist" }
collector = { path = "../collector/collector" }
exporter = { path = "../exporter" }
v11y = { path = "../v11y/v11y" }
trustification-admin = { path = "../admin" }

tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"