[package]
name = "trust"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

bombastic = { workspace = true }
collector = { workspace = true }
collectorist = { workspace = true }
exhort = { workspace = true }
exporter = { workspace = true }
spog = { workspace = true }
trustification-admin = { workspace = true }
v11y = { workspace = true }
vexination = { workspace = true }

