[package]
name = "trustification-version"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

actix-web = { version = "4", optional = true }
utoipa = { version = "4", optional = true, features = ["actix_extras"] }

vergen = { version = "8", optional = true, features = ["build", "git", "gitcl"] }
anyhow = { version = "1", optional = true }

[features]
build = ["vergen"]
vergen = ["dep:vergen", "anyhow"]
actix-web = ["dep:actix-web", "utoipa"]
