[package]
name = "trustification-version"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, optional = true, features = ["actix_extras"] }
vergen = { workspace = true, optional = true, features = ["build", "git", "gitcl"]}

[features]
build = ["vergen"]
vergen = ["dep:vergen", "anyhow"]
actix-web = ["dep:actix-web", "utoipa"]
