[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
clap = { version = "4", features = ["derive", "env"] }
xshell = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = { version = "0.25", features = ["derive"]}