[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.62"
clap = { version = "4", features = ["derive", "env"] }
enumset = "1.1.3"
globset = "0.4.13"
reqwest = { version = "0.11", features = ["blocking", "json"] }
strum = { version = "0.25", features = ["derive"] }
walkdir = "2.4.0"
which = "5.0.0"
xshell = "0.2"
