[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
enumset = { workspace = true }
globset = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
strum = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
which = { workspace = true }
xshell = { workspace = true }
