[package]
name = "bombastic-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bombastic-index = { path = "../index" }
bombastic-model = { path = "../model" }
trustification-infrastructure = { path = "../../infrastructure" }
trustification-storage = { path = "../../storage" }
trustification-index = { path = "../../index" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4.3"
packageurl = "0.3"
rand = "0.8"
futures = "0.3"

utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
