[package]
name = "bombastic-api"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Bombastic REST API for fetching, publishing and searching SBOM data"

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }

bombastic-index = { workspace = true }
bombastic-model = { workspace = true }
trustification-api = { workspace = true }
trustification-auth = { workspace = true, features = ["actix", "swagger"] }
trustification-infrastructure = { workspace = true }
trustification-storage = { workspace = true }
trustification-index = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
