[package]
name = "bombastic"
version = "0.1.0"
edition = "2021"

[dependencies]
bombastic-api = { path = "../api" }
bombastic-indexer = { path = "../indexer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
