[package]
name = "bombastic"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

bombastic-api = { workspace = true }
bombastic-indexer = { workspace = true }
bombastic-walker = { workspace = true }
