[package]
name = "bombastic-index"
version = "0.1.0"
edition = "2021"

[dependencies]
sikula = { version = "0.4.0", features = ["time"] }
zstd = "0.12"
tantivy = { version = "0.21.0", features = ["zstd-compression"] }
log = "0.4"
time = "0.3"
tar = "0.4"
trustification-index = { path = "../../index" }
trustification-api = { path = "../../api" }
bombastic-model = { path = "../model" }
cyclonedx-bom = "0.4.0"
spdx-rs = "0.5.5"
packageurl = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
env_logger = "0.10"
sbom-walker = { version = "0.5", default-features = false, features = ["spdx-rs", "cyclonedx-bom", "crypto-openssl"] }