[package]
name = "bombastic-index"
version = "0.1.0"
edition = "2021"

[dependencies]
bombastic-model = { path = "../model" }
cyclonedx-bom = "0.4.0"
log = "0.4"
packageurl = "0.3"
serde_json = "1.0.68"
sha256 = "1.4.0"
sikula = { version = "0.4.0", features = ["time"] }
spdx-rs = "0.5.5"
time = "0.3"
trustification-api = { path = "../../api" }
trustification-index = { path = "../../index" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
env_logger = "0.10"
sbom-walker = { version = "=0.6.0-alpha.6", default-features = false, features = ["spdx-rs", "cyclonedx-bom", "crypto-openssl"] }
