[package]
name = "bombastic-index"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
cyclonedx-bom = { workspace = true }
log = { workspace = true }
packageurl = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
sikula = { workspace = true, features = ["time"] }
spdx-rs = { workspace = true }
time = { workspace = true }

bombastic-model = { workspace = true }
trustification-api = { workspace = true }
trustification-index = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
env_logger = "0.11"
sbom-walker = { version = "=0.6.0-rc.1", default-features = false, features = ["spdx-rs", "cyclonedx-bom", "crypto-openssl"] }
