[package]
name = "bombastic-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bombastic-index = { path = "../index" }
bombastic-model = { path = "../model" }
trustification-event-bus = { path = "../../event-bus" }
trustification-infrastructure = { path = "../../infrastructure" }
trustification-storage = { path = "../../storage" }
trustification-index = { path = "../../index" }
trustification-indexer = { path = "../../indexer" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
