[package]
name = "bombastic-indexer"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

bombastic-index = { workspace = true }
bombastic-model = { workspace = true }
trustification-event-bus = { workspace = true }
trustification-index = { workspace = true }
trustification-indexer = { workspace = true }
trustification-infrastructure = { workspace = true }
trustification-storage = { workspace = true }