[package]
name = "bombastic-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

description = "The data model of the API"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
sikula = { version = "0.4.1", default-features = false, features = ["time"] }
time = { version = "0.3", features = ["serde"] }
utoipa = { version = "4" }

# required by ToSchema utopia
serde_json = "1"
urlencoding = "2"

cyclonedx-bom = { version = "0.4.0", optional =  true }
spdx-rs = { version = "0.5.5", optional = true }

[features]
default = ["spdx", "cyclonedx"]

cyclonedx = ["cyclonedx-bom"]
spdx = ["spdx-rs"]
