[package]
name = "bombastic-model"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "The data model of the API"

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sikula = { workspace = true, default-features = false, features = ["time"] }
time = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

# required by ToSchema utopia
serde_json = { workspace = true }
urlencoding = { workspace = true }
cyclonedx-bom = { workspace = true, optional =  true }
spdx-rs = { workspace = true, optional = true }

[features]
default = ["spdx", "cyclonedx"]

cyclonedx = ["cyclonedx-bom"]
spdx = ["spdx-rs"]
