[package]
name = "bombastic-walker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
bzip2 = "0.4"
clap = "4.3.3"
humantime = "2.1.0"
log = "0.4"
sbom-walker = { version = "=0.6.0-alpha.6", features = ["crypto-openssl", "spdx-rs", "cyclonedx-bom"], default-features = false }
serde_json = "1"
spdx-expression = "0.5"
time = "0.3.21"
tokio = "1.28.2"
tracing = "0.1"
url = "2.4.0"
walker-common = "=0.6.0-alpha.6"
walker-extras = "=0.6.0-alpha.6"

trustification-auth = { path = "../../auth" }
trustification-infrastructure = { path = "../../infrastructure" }
