[package]
name = "bombastic-walker"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
bzip2 = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
sbom-walker = { workspace = true, features = ["crypto-openssl", "spdx-rs", "cyclonedx-bom"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spdx-expression = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walker-common = { workspace = true }
walker-extras = { workspace = true }

trustification-common-walker = { workspace = true }
trustification-auth = { workspace = true }
trustification-infrastructure = { workspace = true }
