[package]
name = "bombastic-walker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
bzip2 = "0.4"
clap = "4.3.3"
humantime = "2.1.0"
log = "0.4"
parking_lot = "0.12"
sbom-walker = { version = "0.9.0", features = ["crypto-openssl", "spdx-rs", "cyclonedx-bom"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spdx-expression = "0.5"
thiserror = "1"
time = { version = "0.3.21", features = ["serde", "serde-well-known"] }
tokio = "1.28.2"
tracing = "0.1"
url = "2.4.0"
walker-common = "0.9.0"
walker-extras = "0.14.0"

trustification-common-walker = { path = "../../common/walker" }
trustification-auth = { path = "../../auth" }
trustification-infrastructure = { path = "../../infrastructure" }
