[package]
name = "spog"
version = "0.1.0"
edition = "2021"
license = "Apache-2"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
gloo-net = "0.2"
gloo-utils = "0.1"
itertools = "0.10"
log = "0.4"
packageurl = "0.3"
patternfly-yew = { version = "0.4.1", features = ["icons-fab", "tree"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
url = { version = "2", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2"
yew-more-hooks = { version = "0.1.2", features = ["yew-hooks"] }
yew-nested-router = "0.2.1"

bommer-api = { path = "../bommer-api" }

[dependencies.web-sys]
version = "0.3.61"
features = []

[patch.crates-io]
#yew-nested-router = { path = "../yew-nested-router" }
#yew-nested-router = { git = "https://github.com/ctron/yew-nested-router", rev = "9689db446dee7030325884df768d0c2e84f353d6" }
#yew-more-hooks = { git = "https://github.com/ctron/yew-more-hooks", rev = "9f39517aabe25cfadae48f2d225daa1c3a608c20" }
#yew-more-hooks = { path = "../yew-more-hooks" }
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "82472bf7be061614df5b0f55777ce08e7fa20984" }
#patternfly-yew = { path = "../../patternfly-yew" }

[workspace]

# release profile settings to reduce the final binary size
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
