[package]
name = "collector-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
#tokio = { version = "1.0", features = ["full"] }
log = "0.4"
#clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1"
trustification-auth = { path = "../../auth" }



