[package]
name = "collector-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#tokio = { version = "1.0", features = ["full"] }
#clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
anyhow = "1"
trustification-auth = { path = "../../auth" }



