[package]
name = "collector"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

collector-osv = { workspace = true }
collector-snyk = { workspace = true }


