[package]
name = "collector-osv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1"
trustification-auth = { path = "../../auth" }
trustification-common = { path = "../../common" }
#trustification-collector-common = { path = "../common" }
trustification-infrastructure = { path = "../../infrastructure" }
#collectorist-api = { path = "../../collectorist/api"}
#collectorist-client = { path = "../../collectorist/client"}
collector-client = { path = "../client" }
v11y-client = { path = "../../v11y/client" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
derive_more = "0.99"
futures = "0.3"
log = "0.4"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
guac = { workspace = true }
packageurl = "0.3.0"
url = "2"
cvss = "2.0.0"
#sqlx = { version = "0.7.0", features = [ "runtime-tokio", "sqlite", "chrono"] }
reqwest = "0.11.18"
#osv = { version = "0.1.3" }
chrono = "0.4.26"
#typify = { version = "0.0.13", path = "../../../typify/typify" }
#schemafy = "0.6.0"
#chrono = "0.4.26"
#humantime = "2"
#humantime-serde = "1.1.1"


[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
#schemafy_lib = "0.6.0"
#tonic-build = "0.9.2"
