[package]
name = "collector-osv"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cvss = { workspace = true }
derive_more = { workspace = true }
guac = { workspace = true }
log = { workspace = true }
packageurl = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }

collector-client = { workspace = true }
trustification-auth = { workspace = true }
trustification-common = { workspace = true }
trustification-infrastructure = { workspace = true }
v11y-client = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"

[build-dependencies]
#schemafy_lib = "0.6.0"
#tonic-build = "0.9.2"
